--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link data-trunk rel="copy-dir" href="assets" />.
-    <link data-trunk rel="scss" href="index.scss" />
+    <link data-trunk rel="scss" href="web/index.scss" />
 </head>
 
 </html>
